[package]
name = "myox_tcp"
version = "0.1.0"
authors = ["Konstantin Matsiushonak <konstantin_matsiushonak@epam.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = "0.1.2"
ctrlc = "3.1.6"
etherparse = "0.9.0"
pnet = "0.16.0"
smoltcp = "0.6.0"
byteorder = "1.3.4"
packet-builder = "0.5.0"
libc = "0.2.77"
